# ebay-listing-automation

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  PRESENTATION.md  README.md  SECURITY.md  demo.py  ebay_api_integration.py  ebay_art_analyzer.py  ebay_listing_automation.py  enhanced_inventory_creator.py  generate_demo_gif.py  marketing_demo.py  pyproject.toml  requirements.txt  showcase.py
assets/: demo.cast  marketing_demo.cast
catalog/OBEY/: MISSING_ITEMS.csv  OBEY_MASTER_LIST.csv
examples/: sample_product.json
sample_output/: generated_listing.json
tests/: __init__.py  test_listing.py
